# egldhmy-bridge

./: LICENSE  README.md  package-lock.json  package.json
.github/workflows/: main.yml
egld/: README.md
egld/contracts/: Cargo.toml  erdpy.json
egld/contracts/src/: lock_egld.rs
egld/contracts/wallet/: wallet-owner.pem
egld/contracts/wasm/: Cargo.toml
egld/contracts/wasm/src/: lib.rs
egld/dapp/src/pages/Dashboard/Actions/: index.tsx
egld/example/: README.md
egld/example/mycrowdfunding/tests/: crowdfunding_esdt_rust_test.rs
egld/example/mycrowdfunding/wasm/: Cargo.toml
frontend/: package-lock.json  package.json
frontend/src/: index.tsx  routes.ts
frontend/src/components/Layout/: index.tsx
frontend/src/components/Layout/Navbar/: index.tsx
frontend/src/pages/Home/: index.tsx
frontend/src/src_egld/: App.tsx  config.tsx  routes.ts
frontend/src/src_egld/assets/sass/: theme.scss
frontend/src/src_egld/components/Layout/Navbar/: index.tsx
frontend/src/src_egld/pages/Dashboard/: TopInfo.tsx
frontend/src/src_egld/pages/Dashboard/Actions/: index.tsx
frontend/src/src_egld/pages/Dashboard/Transactions/: index.tsx
frontend/src/src_egld/pages/Home/: index.tsx
frontend/src/src_egld/pages/Transaction/: index.tsx
frontend/src/src_egld/pages/UnlockPage/: index.tsx
frontend/src/src_hrc/: App.tsx  Interactions.js  Wallet.js
frontend/src/src_hrc/pages/Dashboard/Interactions/: Interactions.js
frontend/src/src_hrc/pages/Dashboard/Wallet/: Wallet.js  (+1 more)
hrc/: truffle-config.js
hrc/contracts/: HRC_EGLD.sol
hrc/migrations/: 1_initial_migration.js
