[package]
name = "lock-egld-wasm"
version = "0.0.1"
authors = [ "Constantin Pricope",]
edition = "2021"
publish = false

[lib]
crate-type = [ "cdylib",]

[workspace]

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"

[dependencies.lock-egld]
path = ".."

[dependencies.elrond-wasm-node]
version = "0.29.3"

[dependencies.elrond-wasm-output]
version = "0.29.3"
features = ["wasm-output-mode"]
